--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,68 @@
 }
 
 body {
-  font-family: sans-serif;
+  min-width: 320px;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+}
+
+h1, h2, h3 {
+  font-family: 'Roboto Slab', serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+/* header */
+.nav-bar {
+  display: flex;
+  list-style: none;
+}
+
+.nav-desktop {
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-desktop li:first-child {
+  margin: 0 auto 0 0;
+}
+
+.nav-mobile {
+  position: absolute;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 100vh;
+  background-color: red;
 }
 
 /* main */
 p {
-  background-color: lightblue;
+  border: 1px solid red;
 }
 
+/* tolls */
+.display-none {
+  display: none;
+}
+
+.display-inline-block {
+  display: inline-block;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-flex {
+  display: flex;
+}
 
 /* note */
 .font {
