--- a/css/style.css
+++ b/css/style.css
@@ -20,19 +20,43 @@ a {
   color: #000000;
 }
 
+.container {
+  max-width: 1200px;
+  width: 90%;
+  margin: auto;
+}
+
 /* header */
 .nav-bar {
   display: flex;
   list-style: none;
 }
 
+.nav-bar li {
+  margin: 0 10px;
+}
+
+.nav-bar a {
+  display: inline-block;
+  font-size: 20px;
+}
+
 .nav-desktop {
   justify-content: flex-end;
   align-items: center;
+  margin: 20px 0;
+}
+
+.nav-desktop li {
+  margin: 0 10px;
 }
 
 .nav-desktop li:first-child {
-  margin: 0 auto 0 0;
+  margin: 0 auto 0 10px;
+}
+
+.nav-desktop li:last-child {
+  display: none;
 }
 
 .nav-mobile {
@@ -47,9 +71,27 @@ a {
   background-color: red;
 }
 
+.nav-mobile .hamburger {
+  position: absolute;
+  top: 24px;
+  right: 40px;
+}
+
 /* main */
 p {
   border: 1px solid red;
+}
+
+/* media queries */
+@media screen and (max-width: 768px) {
+  .nav-desktop li {
+    display: none;
+  }
+
+  .nav-desktop li:first-child,
+  .nav-desktop li:last-child {
+    display: inline-block;
+  }
 }
 
 /* tolls */
