--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   min-width: 320px;
+  min-height: 568px;
   background-color: #fce2c0;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -39,12 +40,15 @@ a {
 
 .nav-bar a {
   display: inline-block;
+  border-bottom: 1px solid transparent;
   font-size: 20px;
+  font-weight: bold;
 }
 
 .nav-bar a:focus,
 .nav-bar a:hover,
 .nav-bar a:active {
+  border-bottom: 1px solid #E81123;
   color: #E81123;
 }
 
@@ -75,24 +79,27 @@ a {
   top: 0;
   left: 0;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
   width: 100%;
   height: 100vh;
-  /* overflow: hidden; */
   background-color: #fce2c0;
+}
+
+.nav-mobile li {
+  margin: 20px 10px;
 }
 
 .nav-mobile .home {
   position: absolute;
-  top: 24px;
-  left: 40px;
+  top: 20px;
+  left: 38px;
 }
 
 .nav-mobile .hamburger {
   position: absolute;
-  top: 24px;
-  right: 40px;
+  top: 20px;
+  right: 38px;
 }
 
 .nav-mobile a {
@@ -162,6 +169,13 @@ a {
 }
 
 /* media queries */
+@media screen and (max-width: 992px) {
+  /* main */
+  .five-ws {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media screen and (max-width: 768px) {
   /* header */
   .nav-desktop li {
@@ -196,11 +210,11 @@ a {
   display: flex;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
-/* note */
+/* notes */
 .font {
   font-family: 'Roboto', sans-serif;
   font-family: 'Roboto Slab', serif;
@@ -223,4 +237,10 @@ a {
   color: #f39c12;
   /* body background-color */
   background-color: #fad3a2;
+}
+
+/* bugs */
+.bugs {
+  /* not working on ios */
+  overflow-y: hidden;
 }
