--- a/css/style.css
+++ b/css/style.css
@@ -94,12 +94,14 @@ a {
   position: absolute;
   top: 20px;
   left: 38px;
+  margin: 0 10px;
 }
 
 .nav-mobile .hamburger {
   position: absolute;
   top: 20px;
   right: 38px;
+  margin: 0 10px;
 }
 
 .nav-mobile a {
@@ -146,6 +148,15 @@ a {
 .ws h2 {
   margin: 0 0 10px 0;
   text-align: center;
+}
+
+.ws .wrapper {
+  margin: 10px;
+  text-align: center;
+}
+
+.ws img {
+  height: 60px;
 }
 
 .who {
