--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ a {
   max-width: 350px;
   border-radius: 10px;
   padding: 10px;
+  text-align: justify;
   color: #ffffff;
 }
 
@@ -177,6 +178,17 @@ a {
 
 .why {
   background-color: #000000;
+}
+
+/* footer */
+.copyright {
+  margin: 40px 0 10px 0;
+  text-align: right;
+}
+
+.copyright a {
+  font-weight: bold;
+  color: #E81123;
 }
 
 /* media queries */
