--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ a {
   color: #E81123;
 }
 
+.nav-bar .selection {
+  border-bottom: 1px solid #E81123;
+  color: #E81123;
+}
+
 .nav-bar i {
   font-size: 32px;
 }
@@ -161,7 +166,7 @@ a {
 }
 
 .who {
-  background-color: #0078D7;
+  background-color: #FFB900;
 }
 
 .what {
@@ -169,7 +174,7 @@ a {
 }
 
 .when {
-  background-color: #FFB900;
+  background-color: #0078D7;
 }
 
 .where {
