--- a/css/style.css
+++ b/css/style.css
@@ -1,274 +1,278 @@
 /* general */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
-  min-width: 320px;
-  min-height: 568px;
-  background-color: #fce2c0;
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+	min-width: 320px;
+	min-height: 568px;
+	background-color: #fce2c0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 
-h1, h2, h3 {
-  font-family: 'Roboto Slab', serif;
+h1,
+h2,
+h3 {
+	font-family: 'Roboto Slab', serif;
 }
 
 a {
-  text-decoration: none;
-  color: #000000;
+	text-decoration: none;
+	color: #000000;
 }
 
 .container {
-  max-width: 1200px;
-  width: 90%;
-  margin: auto;
+	max-width: 1200px;
+	width: 90%;
+	margin: auto;
 }
 
 /* header */
 .nav-bar {
-  display: flex;
-  list-style: none;
+	display: flex;
+	list-style: none;
 }
 
 .nav-bar li {
-  margin: 0 10px;
+	margin: 0 10px;
 }
 
 .nav-bar a {
-  display: inline-block;
-  border-bottom: 1px solid transparent;
-  font-size: 20px;
-  font-weight: bold;
+	display: inline-block;
+	border-bottom: 1px solid transparent;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .nav-bar a:focus,
 .nav-bar a:hover,
 .nav-bar a:active {
-  border-bottom: 1px solid #E81123;
-  color: #E81123;
+	border-bottom: 1px solid #E81123;
+	color: #E81123;
 }
 
 .nav-bar .selection {
-  border-bottom: 1px solid #E81123;
-  color: #E81123;
+	border-bottom: 1px solid #E81123;
+	color: #E81123;
 }
 
 .nav-bar i {
-  font-size: 32px;
+	font-size: 32px;
 }
 
 .nav-desktop {
-  justify-content: flex-end;
-  align-items: center;
-  margin: 20px 0;
+	justify-content: flex-end;
+	align-items: center;
+	margin: 20px 0;
 }
 
 .nav-desktop li {
-  margin: 0 10px;
+	margin: 0 10px;
 }
 
 .nav-desktop li:first-child {
-  margin: 0 auto 0 10px;
+	margin: 0 auto 0 10px;
 }
 
 .nav-desktop li:last-child {
-  display: none;
+	display: none;
 }
 
 .nav-mobile {
-  position: absolute;
-  top: 0;
-  left: 0;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  background-color: #fce2c0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100vh;
+	background-color: #fce2c0;
 }
 
 .nav-mobile li {
-  margin: 20px 10px;
+	margin: 20px 10px;
 }
 
 .nav-mobile .home {
-  position: absolute;
-  top: 20px;
-  left: 38px;
-  margin: 0 10px;
+	position: absolute;
+	top: 20px;
+	left: 38px;
+	margin: 0 10px;
 }
 
 .nav-mobile .hamburger {
-  position: absolute;
-  top: 20px;
-  right: 38px;
-  margin: 0 10px;
+	position: absolute;
+	top: 20px;
+	right: 38px;
+	margin: 0 10px;
 }
 
 .nav-mobile a {
-  font-size: 32px;
+	font-size: 32px;
 }
 
 .main-title {
-  text-align: center;
-  color: #000000;
+	text-align: center;
+	color: #000000;
 }
 
 .s {
-  color: #FFB900;
+	color: #FFB900;
 }
 
 .p {
-  color: #E81123;
+	color: #E81123;
 }
 
 .t {
-  color: #0078D7;
+	color: #0078D7;
 }
 
 .r {
-  color: #10893E;
+	color: #10893E;
 }
 
 /* main */
 .five-ws {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 15px;
-  margin: 20px 0;
+	display: grid;
+	justify-items: center;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 15px;
+	margin: 20px 0;
 }
 
 .ws {
-  max-width: 350px;
-  border-radius: 10px;
-  padding: 10px;
-  text-align: justify;
-  color: #ffffff;
+	max-width: 350px;
+	border-radius: 10px;
+	padding: 10px;
+	text-align: justify;
+	color: #ffffff;
 }
 
 .ws h2 {
-  margin: 0 0 10px 0;
-  text-align: center;
+	margin: 0 0 10px 0;
+	text-align: center;
 }
 
 .ws .wrapper {
-  margin: 10px;
-  text-align: center;
+	margin: 10px;
+	text-align: center;
 }
 
 .ws img {
-  height: 60px;
+	height: 60px;
 }
 
 .who {
-  background-color: #FFB900;
+	background-color: #FFB900;
 }
 
 .what {
-  background-color: #E81123;
+	background-color: #E81123;
 }
 
 .when {
-  background-color: #0078D7;
+	background-color: #0078D7;
 }
 
 .where {
-  background-color: #10893E;
+	background-color: #10893E;
 }
 
 .why {
-  background-color: #000000;
+	background-color: #000000;
 }
 
 /* footer */
 .copyright {
-  margin: 40px 0 10px 0;
-  text-align: right;
+	margin: 40px 0 10px 0;
+	text-align: right;
 }
 
 .copyright a {
-  font-weight: bold;
-  color: #E81123;
+	font-weight: bold;
+	color: #E81123;
 }
 
 /* media queries */
 @media screen and (max-width: 992px) {
-  /* main */
-  .five-ws {
-    grid-template-columns: repeat(2, 1fr);
-  }
+
+	/* main */
+	.five-ws {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 @media screen and (max-width: 768px) {
-  /* header */
-  .nav-desktop li {
-    display: none;
-  }
 
-  .nav-desktop li:first-child,
-  .nav-desktop li:last-child {
-    display: inline-block;
-  }
+	/* header */
+	.nav-desktop li {
+		display: none;
+	}
 
-  /* main */
-  .five-ws {
-    grid-template-columns: repeat(1, 1fr);
-  }
+	.nav-desktop li:first-child,
+	.nav-desktop li:last-child {
+		display: inline-block;
+	}
+
+	/* main */
+	.five-ws {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
 
 /* tolls */
 .display-none {
-  display: none;
+	display: none;
 }
 
 .display-inline-block {
-  display: inline-block;
+	display: inline-block;
 }
 
 .display-block {
-  display: block;
+	display: block;
 }
 
 .display-flex {
-  display: flex;
+	display: flex;
 }
 
 .overflow-y-hidden {
-  overflow-y: hidden;
+	overflow-y: hidden;
 }
 
 /* notes */
 .font {
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Roboto Slab', serif;
+	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Slab', serif;
 }
 
 .color {
-  /* https://fluentcolors.com/ */
-  color: #FFB900;
-  color: #E81123;
-  color: #0078D7;
-  color: #10893E;
-  color: #000000;
-  color: #847545;
-  /* https://flatuicolors.com/palette/defo */
-  color: #f1c40f;
-  color: #e74c3c;
-  color: #3498db;
-  color: #2ecc71;
-  color: #000000;
-  color: #f39c12;
-  /* body background-color */
-  background-color: #fad3a2;
+	/* https://fluentcolors.com/ */
+	color: #FFB900;
+	color: #E81123;
+	color: #0078D7;
+	color: #10893E;
+	color: #000000;
+	color: #847545;
+	/* https://flatuicolors.com/palette/defo */
+	color: #f1c40f;
+	color: #e74c3c;
+	color: #3498db;
+	color: #2ecc71;
+	color: #000000;
+	color: #f39c12;
+	/* body background-color */
+	background-color: #fad3a2;
 }
 
 /* bugs */
 .bugs {
-  /* not working on ios */
-  overflow-y: hidden;
+	/* not working on ios */
+	overflow-y: hidden;
 }
